--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
+	<meta charset="utf-8"> 
+	<meta name="viewport" content="width=device-width, init-scale=1.0">
 	<title>personal website</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru:wght@500&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
@@ -11,30 +14,77 @@
 
 </head>
 <body>
+	<section>
 	<div id="nav"> 
 		<h1><a href="index.html">Anna Peach Studio</a></h1>
 
 		<ul>
-			<li id="anna"><a href="Home.html">Home</a></li>
+			
 			<li><a href="About us.html">About us</a></li>
 			<li><a href="Portfolio.html">Portfolio</a></li>
 			<li><a href="Contact us.html">Contact us</a></li>
 		</ul>
 
 
-
-
-
-
-	<div id="anna1">
+    <div id="anna1">
 		
 	</div>
 
-    
-
-	<div id="anna2">
+    <div id="anna2">
 		
 	</div>
+
+	
+</div>
+
+<div class="content">
+	<div class="textBox">
+		<h2>My name is<br><span>NGAN DAO</span></h2>
+		<p>I am a Vietnamese Graphic Designer... </p>
+		<a href="#"> Read More </a>
+	</div>
+
+	<div class="slider">
+		<div class="sliders">
+
+			<input type="radio" name="radio-btn" id="radio1">
+			<input type="radio" name="radio-btn" id="radio2">
+			<input type="radio" name="radio-btn" id="radio3">
+
+		
+		<div class="slide first">
+			<img src="img/business card mockup.png" alt="1" >
+			
+		</div>
+
+		<div class="slide">
+			<img src="img/front cover.jpg" alt="2" >
+			
+		</div>
+
+		<div class="slide">
+			<img src="img/Ngan Dao_the hungergame typo.png" alt="3">
+			
+		</div>
+
+		<div class="navigation-auto">
+			<div class="auto-btn1"></div>
+			<div class="auto-btn2"></div>
+			<div class="auto-btn3"></div>
+			
+        </div>
+
+		</div>
+
+		<div class="navigation-manual">
+			<label for="radio1" class="manual-btn"></label>
+			<label for="radio2" class="manual-btn"></label>
+			<label for="radio3" class="manual-btn"></label>
+			
+
+        </div>
+	</div>
+
 
 	
 
@@ -42,10 +92,34 @@
 
 
 
+</div>
+</section>
 
 
+<footer>
+  <div class="footer-content">
+  	<h3>Anna Peach Studio</h3>
+  	<ul class="socials">
+  		<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+  		<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+  		
+  	</ul>
+  	
+</div>
 
-	</div>
+<div class="footer-bottom">
+	<p>copyright &copy;2021 Anna Peach studio. desgign by <span>Ngandao</span></p>
+	
+
+</div>
+</footer>
+
 
 </body>
+
+
+
 </html>
+
+
+
