--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 		<h1><a href="index.html">Anna Peach Studio</a></h1>
 
 		<ul>
-			
 			<li><a href="About us.html">About us</a></li>
 			<li><a href="Portfolio.html">Portfolio</a></li>
 			<li><a href="Contact us.html">Contact us</a></li>
@@ -39,9 +38,9 @@
 
 <div class="content">
 	<div class="textBox">
-		<h2>My name is<br><span>NGAN DAO</span></h2>
+		<h2>Hi,<br>My name is<br><span>NGAN DAO</span></h2>
 		<p>I am a Vietnamese Graphic Designer... </p>
-		<a href="#"> Read More </a>
+		<a href="About us.html"> Read More </a>
 	</div>
 
 	<div class="slider">
@@ -53,17 +52,17 @@
 
 		
 		<div class="slide first">
-			<img src="img/business card mockup.png" alt="1" >
+			<a href="Portfolio.html"><img src="img/business card mockup.png" alt="1" ></a>
 			
 		</div>
 
 		<div class="slide">
-			<img src="img/front cover.jpg" alt="2" >
+			<a href="Portfolio.html"><img src="img/front cover.jpg" alt="2" ></a>
 			
 		</div>
 
 		<div class="slide">
-			<img src="img/Ngan Dao_the hungergame typo.png" alt="3">
+			<a href="Portfolio.html"><img src="img/Ngan Dao_the hungergame typo.png" alt="3"> </a>
 			
 		</div>
 
@@ -100,8 +99,8 @@
   <div class="footer-content">
   	<h3>Anna Peach Studio</h3>
   	<ul class="socials">
-  		<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-  		<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+  		<li><a href="https://www.facebook.com/profile.php?id=100009155832857"><i class="fa fa-facebook"></i></a></li>
+  		<li><a href="https://www.instagram.com/a4nn_a/"><i class="fa fa-instagram"></i></a></li>
   		
   	</ul>
   	
