--- a/About us.html
+++ b/About us.html
@@ -24,6 +24,19 @@
 	</div>
 </section>
 
+
+  <div class="aboutus">
+	 <p>Ha ha ha</p>
+</div>
+
+
+ <div>
+			<div class="img">
+				<img src="img/animation2.gif" >
+			</div>
+		</div>
+
+
 <footer>
   <div class="footer-content">
   	<h3>Anna Peach Studio</h3>
