--- a/Contact us.html
+++ b/Contact us.html
@@ -23,6 +23,17 @@
 	</div>
 </section>
 
+
+			<div class="img">
+				<img src="img/animation.gif" >
+				<h1>Email: ana26498@gmail.com</h1>
+
+			</div>
+		
+
+
+
+
 <footer>
   <div class="footer-content">
   	<h3>Anna Peach Studio</h3>
@@ -33,6 +44,9 @@
   	</ul>
   	
 </div>
+
+
+
 
 <div class="footer-bottom">
 	<p>copyright &copy;2021 Anna Peach studio. desgign by <span>Ngandao</span></p>
