--- a/Portfolio.html
+++ b/Portfolio.html
@@ -23,22 +23,42 @@
 
 	</div>
 </section>
+<div class="typebox">
+	 <p>I am a Vietnamese Graphic Designer... </p>
+</div>
 
-<div class="contener">
+<div class="container">
 	<div class="card">
 			<div class="imgBx">
 				<img src="img/business card mockup.png" >
 			</div>
+		</div>
 
-
+    <div class="card">
 			<div class="imgBx">
 				<img src="img/front cover.jpg">
 			</div>
+        </div>
 
-
+    <div class="card">
 			<div class="imgBx">
 				<img src="img/Ngan Dao_the hungergame typo.png" >
 			</div>
+		</div>
+
+	<div class="card2">
+			<div class="imgBx">
+				<video controls src="img/Coraline 2-1.M4V" type="video/M4V">
+				</video>
+			</div>
+		</div>
+
+	  
+
+
+
+
+	</div>
 
 
 
