--- a/About us.html
+++ b/About us.html
@@ -26,15 +26,11 @@
 
 
   <div class="aboutus">
-	 <p>Ha ha ha</p>
+	 <p>Ha ha ha <br>My name is Ngan Dao. I am a Vietnamese graphic designer.<br>
+	 I Like food, music, art and movie</p>
 </div>
 
 
- <div>
-			<div class="img">
-				<img src="img/animation2.gif" >
-			</div>
-		</div>
 
 
 <footer>
