--- a/Contact us.html
+++ b/Contact us.html
@@ -23,10 +23,9 @@
 	</div>
 </section>
 
-
-			<div class="img">
-				<img src="img/animation.gif" >
-				<h1>Email: ana26498@gmail.com</h1>
+        <div class="email">
+        	<h1>Email: ana26498@gmail.com</h1></div>
+				
 
 			</div>
 		
